[tool.poetry]
name = "crypto-chatbot"
version = "0.1.0"
description = "A FastAPI-based platform for GenAI-powered cryptocurrency analysis, providing real-time chat, price history, news summaries, and technical insights, with a modern Streamlit frontend and robust, reproducible dependency management using Poetry."
authors = ["Derrick Tan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
exa-py = "^1.12.0"
python-dotenv = "^1.1.0"
requests = "^2.32.0"
pydantic = "^2.11.0"
google-generativeai = "^0.8.0"
streamlit = "^1.45.0"
pandas = "^2.2.0"
sqlmodel = "^0.0.24"
sqlalchemy = "^2.0.40"
typing-extensions = "^4.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
